objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>Materials_Source__c</fullName>
        <inlineHelpText>Source of material</inlineHelpText>
        <label>Materials Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TDI</fullName>
                </value>
                <value>
                    <fullName>EIT</fullName>
                </value>
                <value>
                    <fullName>Nextek</fullName>
                </value>
                <value>
                    <fullName>Group MFG Services</fullName>
                </value>
                <value>
                    <fullName>Woven</fullName>
                </value>
                <value>
                    <fullName>Acronics</fullName>
                </value>
                <value>
                    <fullName>DeAnza MFG</fullName>
                </value>
                <value>
                    <fullName>Deni</fullName>
                </value>
                <value>
                    <fullName>Super Micro</fullName>
                </value>
                <value>
                    <fullName>Amphenol</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCR_MRB__c</fullName>
        <externalId>true</externalId>
        <label>NCR_MRB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Part_SN_In__c</fullName>
        <description>New Part Serial Number IN</description>
        <inlineHelpText>New Part Serial Number IN</inlineHelpText>
        <label>IP S/N In</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Serialized_Part_In__c</fullName>
        <description>Non Serialized Part IN</description>
        <inlineHelpText>Non Serialized part IN</inlineHelpText>
        <label>Non Serialized IP In</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Serialized_Part_Out__c</fullName>
        <description>Non Serialized Part OUT</description>
        <inlineHelpText>Non Serialized Part OUT</inlineHelpText>
        <label>Non Serialized IP Out</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Part_SN_Out__c</fullName>
        <description>Old Part Serial Number OUT</description>
        <inlineHelpText>Old Part Serial Number OUT</inlineHelpText>
        <label>IP S/N Out</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Site_Date_Time__c</fullName>
        <label>On Site Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Item_Priority__c</fullName>
        <label>Open Item Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Items_Description__c</fullName>
        <label>Open Items Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Components_Replaced__c</fullName>
        <inlineHelpText>Use this for unknown part numbers or non standard repairs</inlineHelpText>
        <label>Other Components Replaced</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Materials_Source__c</fullName>
        <description>Other Materials Source</description>
        <inlineHelpText>Other Materials Source</inlineHelpText>
        <label>Other Materials Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Repair_Materials_Vendor__c</fullName>
        <description>Name of other repair/materials vendor/source.</description>
        <inlineHelpText>Name of other repair/materials vendor/source.</inlineHelpText>
        <label>Other Repair/Materials Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>If failure code is Other, enter the reason here</description>
        <inlineHelpText>If failure code is Other, enter the reason here</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_Issues__c</fullName>
        <label>Outstanding Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_N_Description__c</fullName>
        <formula>SVMXC__Component__r.SVMXC__Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/N Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <description>Part Description</description>
        <inlineHelpText>Part Description</inlineHelpText>
        <label>Part Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Removed__c</fullName>
        <description>Part Number Removed</description>
        <inlineHelpText>Part Number Removed</inlineHelpText>
        <label>Part Removed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Order_RMA_Number__c</fullName>
        <description>Parts Order/RMA Number</description>
        <inlineHelpText>Parts Order/RMA Number</inlineHelpText>
        <label>Cadence-RMA Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Level__c</fullName>
        <description>Patch Level</description>
        <label>Patch Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Of_Machine_Down__c</fullName>
        <label>Percentage Of Machine Down</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plant_Location__c</fullName>
        <description>Plant Location</description>
        <inlineHelpText>Plant Location</inlineHelpText>
        <label>Plant Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1140</fullName>
                </value>
                <value>
                    <fullName>1141</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_Distribution_Unit__c</fullName>
        <formula>TEXT( SVMXC__Case__r.Power_Distribution_Unit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Distribution Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_2nd_Component_Replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Component Replaced</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders (2nd Component Replaced)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_3rd_Component_Replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3rd Component Replaced</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders (3rd Component Replaced)</relationshipLabel>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Component_Replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component Replaced</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders (Component Replaced)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Engineering_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Engineering Approval</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>ServiceMax</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Production Manager 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Engineering_Disposition_Text__c</fullName>
        <label>Product Engineering Disposition Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Engineering_Disposition__c</fullName>
        <description>Product Engineering Disposition</description>
        <inlineHelpText>Product Engineering Disposition</inlineHelpText>
        <label>Product Engineering Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>SVMXC__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Approval</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>ServiceMax</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Production Manager 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Disposition_Text__c</fullName>
        <label>QA Disposition Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QA_Disposition__c</fullName>
        <description>QA specified materials disposition</description>
        <inlineHelpText>QA specified materials disposition</inlineHelpText>
        <label>QA Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty_2nd_Component_Replaced__c</fullName>
        <description>Quantity - 2nd Component Replaced</description>
        <label>Qty-2nd Component Replaced</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_3rd_Component_Replaced__c</fullName>
        <description>Quantity - 3rd Component Replaced</description>
        <label>Qty-3rd Component Replaced</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Component_Replaced__c</fullName>
        <description>Quantity of first component replaced</description>
        <label>Qty-Component Replaced</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <description>Quantity Requested by Cadence to Vendor</description>
        <inlineHelpText>Quantity Requested by Cadence to Vendor for Recertification / Repairs</inlineHelpText>
        <label>Quantity Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_MFG_No__c</fullName>
        <description>Reason for MFG No</description>
        <inlineHelpText>Reason for MFG No</inlineHelpText>
        <label>Reason for MFG No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_MFG__c</fullName>
        <label>Reason for MFG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use as is</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Materials_No__c</fullName>
        <description>Materials Disposition</description>
        <inlineHelpText>Materials Disposition</inlineHelpText>
        <label>Reason for Materials No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Materials__c</fullName>
        <label>Reason for Materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use as is</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Product_Engineering_No__c</fullName>
        <description>Reason for Product Engineering No</description>
        <inlineHelpText>Reason for Product Engineering No</inlineHelpText>
        <label>Reason for Product Engineering No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Product_Engineering__c</fullName>
        <label>Reason for Product Engineering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use as is</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_QA_No__c</fullName>
        <description>Reason for QA &quot;No&quot; answer on Materials Disposition</description>
        <inlineHelpText>Reason for QA &quot;No&quot; answer on Materials Disposition</inlineHelpText>
        <label>Reason for QA No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_QA__c</fullName>
        <label>Reason for QA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use as is</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Designator_2nd_Component_Rplcd__c</fullName>
        <label>Reference Designator-2nd Component Rplcd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Designator_3rd_Component_Rplcd__c</fullName>
        <label>Reference Designator-3rd Component Rplcd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Designator_Component_Replaced__c</fullName>
        <label>Reference Designator -Component Replaced</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <inlineHelpText>Staff person identifying failure/problem</inlineHelpText>
        <label>Rejected By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_DateTime__c</fullName>
        <label>Rejected DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repair_Category__c</fullName>
        <inlineHelpText>Select the appropriate category for this repair</inlineHelpText>
        <label>Repair Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Upgrade Revision</fullName>
                </value>
                <value>
                    <fullName>Repair and Upgrade</fullName>
                </value>
                <value>
                    <fullName>Test Only</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Deviation</fullName>
                </value>
                <value>
                    <fullName>Workmanship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Materials_Vendor__c</fullName>
        <description>Repair Vendor or Materials Source</description>
        <inlineHelpText>The name of the vendor completing the repair</inlineHelpText>
        <label>Repair/Materials Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TDI</fullName>
                </value>
                <value>
                    <fullName>EIT</fullName>
                </value>
                <value>
                    <fullName>Nextek</fullName>
                </value>
                <value>
                    <fullName>Group MFG Services</fullName>
                </value>
                <value>
                    <fullName>Woven</fullName>
                </value>
                <value>
                    <fullName>Acronics</fullName>
                </value>
                <value>
                    <fullName>DeAnza MFG</fullName>
                </value>
                <value>
                    <fullName>DINI</fullName>
                </value>
                <value>
                    <fullName>Super Micro</fullName>
                </value>
                <value>
                    <fullName>Amphenol</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Joy Signal</fullName>
                </value>
                <value>
                    <fullName>Paricon</fullName>
                </value>
                <value>
                    <fullName>Neoconix</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Status__c</fullName>
        <label>Repair Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>RFV</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending Cadence</fullName>
                </value>
                <value>
                    <fullName>Pending Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <description>WO order creation Requested By</description>
        <inlineHelpText>WO order creation Requested By - enter name of person who has requested to create this WO</inlineHelpText>
        <label>Requested By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power cycle</fullName>
                </value>
                <value>
                    <fullName>NCC Reboot</fullName>
                </value>
                <value>
                    <fullName>Configmgr reset</fullName>
                </value>
                <value>
                    <fullName>FW upgrade</fullName>
                </value>
                <value>
                    <fullName>Patch/Hotfix</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Reseated</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Environment Problem Resolved (cooling / power)</fullName>
                </value>
                <value>
                    <fullName>Reinstall</fullName>
                </value>
                <value>
                    <fullName>Replace Host</fullName>
                </value>
                <value>
                    <fullName>Not reproducible</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Markout</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>FPGA Reload</fullName>
                </value>
                <value>
                    <fullName>Host Reboot</fullName>
                </value>
                <value>
                    <fullName>Reimaged</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>re-calibrated coolant level sensor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rev_Current__c</fullName>
        <inlineHelpText>Most current revision level</inlineHelpText>
        <label>Rev. Current</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Received__c</fullName>
        <inlineHelpText>Revision Level received</inlineHelpText>
        <label>Rev. Received</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rework_Instructions__c</fullName>
        <description>Rework Instructions from Cadence to Vendor</description>
        <inlineHelpText>Rework Instructions from Cadence to Vendor</inlineHelpText>
        <label>Rework Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Description__c</fullName>
        <label>Vendor Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Runtime_SW_Patch_Number__c</fullName>
        <description>Runtime SW Patch Number</description>
        <inlineHelpText>Runtime SW Patch Number</inlineHelpText>
        <label>Runtime SW Patch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Runtime_SW_Version__c</fullName>
        <description>Runtime SW Version</description>
        <inlineHelpText>Runtime SW Version</inlineHelpText>
        <label>Runtime SW Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UXE111</fullName>
                </value>
                <value>
                    <fullName>UXE121</fullName>
                </value>
                <value>
                    <fullName>UXE131</fullName>
                </value>
                <value>
                    <fullName>IXE521-Q5</fullName>
                </value>
                <value>
                    <fullName>IXE521-Q6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Notification_Response_Date__c</fullName>
        <description>SAP Notification Response Date</description>
        <label>SAP Notification Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Notification_Response__c</fullName>
        <description>SAP Notification Response</description>
        <label>SAP Notification Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_SVC_Notification_Number__c</fullName>
        <description>SAP Notification Number</description>
        <inlineHelpText>SAP Notification Number</inlineHelpText>
        <label>SAP Notification Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Order_Number__c</fullName>
        <formula>SVMXC__Component__r.SVMXC__Sales_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Acknowledged_By_Technician_Date_Time__c</fullName>
        <description>Date and time when technician acknowledges the scheduled work order</description>
        <inlineHelpText>Date and time when technician acknowledges the scheduled work order</inlineHelpText>
        <label>Acknowledged By Technician Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Date/time on which customer was initial responsed as per commitment in SLA.</description>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
        <description>Date/time on which customer was onsite responsed as per commitment in SLA.</description>
        <label>Actual Onsite Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Resolution__c</fullName>
        <description>Date/time on which customer was resolved as per commitment in SLA.</description>
        <label>Actual Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Restoration__c</fullName>
        <description>Date/time on which customer was restored as per commitment in SLA.</description>
        <label>Actual Restoration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Age_Bucket__c</fullName>
        <description>Age of the service order grouped in buckets for reporting purposes.</description>
        <formula>IF (SVMXC__Age__c &lt;= 7, &quot;Less Than 8 days&quot;, 
IF (SVMXC__Age__c &lt;= 15, &quot;8 To 15 days&quot;, 
IF (SVMXC__Age__c &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the service order grouped in buckets for reporting purposes.</inlineHelpText>
        <label>Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Age__c</fullName>
        <description>Age of the service order for reporting purposes.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the service order for reporting purposes.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Apply_Business_Hours_For_OptiMax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</description>
        <inlineHelpText>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</inlineHelpText>
        <label>Apply Business Hours For OptiMax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Appointment_Promised_Time_Slot__c</fullName>
        <label>Promised Appointment Time Slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Auto_Entitlement_Status__c</fullName>
        <label>Auto Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__BatchUpdate__c</fullName>
        <description>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</description>
        <inlineHelpText>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</inlineHelpText>
        <label>Batch Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Type__c</fullName>
        <description>How the service order expenses will be accounted for. Agreement, Paid etc.</description>
        <inlineHelpText>How the service order expenses will be accounted for. Agreement, Paid etc.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
                <value>
                    <fullName>Empowerment</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Booked_Appointment_Slot__c</fullName>
        <description>This field stores the slot information of the booked appointment.</description>
        <label>Booked Appointment Slot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>